Fix search modal not covering navbar (#82)
Fix search modal not covering navbar

--- a/frontend/bowtie/src/components/gamelist/GameSearchModal/GameSearchModal.scss
+++ b/frontend/bowtie/src/components/gamelist/GameSearchModal/GameSearchModal.scss
@@ -131,7 +131,9 @@
   width: 100%;
   height: 100%;
   margin-left: -10px;
-  margin-top: -10px;
+  margin-top: -1000px;
+  padding: 1000px;
+  
 }
 
 @media only screen and (max-width: 500px) {
